--- a/assets/css/projectsv15.scss
+++ b/assets/css/projectsv15.scss
@@ -12,6 +12,10 @@ h3 {
     text-align: center;
     padding-bottom: 1.75rem;
   }
+
+  .navbar-light .navbar-nav .nav-link {
+    color: white;
+}
   
   h4 {
     font-size: 1.25rem;
