--- a/assets/css/mainscrollv15.scss
+++ b/assets/css/mainscrollv15.scss
@@ -27,7 +27,7 @@ p.about-txt {
 
 body {
     background: linear-gradient($grad-1, $grad-2, $grad-3, $grad-4, $grad-5) no-repeat;
-    height: auto;
+    height: fit-content;
     position: relative;
 }
 
@@ -63,7 +63,6 @@ p {
 .social-icons {
     display: flex;
     flex-direction: column;
-    // justify-content: flex-end;
     position: absolute;
     left: 90%;
 }
@@ -87,44 +86,15 @@ p {
 
 // LANDING TITLE
 
-#landing-section{
-    min-height: 75%;
-    height: 100%;
-    position: relative;
-    width: 100%;
-}
-
 .landing{
     position: relative;
-    height: 100%;
     width: 100%;
+    height: 100vh;
 }
 
-// .landing-text > h3 {
-//     font-weight: 800;
-//     font-size: 1.75rem;
-//     padding-bottom: 1rem;
-//     padding-top: 3rem;
-// }
-
-// .landing-text > h1 {
-//     font-weight: 800;
-//     text-transform: uppercase;
-//     font-size: 2rem;
-//     // border-bottom: 10px solid $blue;
-// }
-
-// .landing-text-top {
-//     color: $title-light;
-//     padding: 0 0.75rem;
-//     text-align: center;
-// }
-
-// .landing-text-bkd {
-//     color: $title-dark;
-//     padding: 0 0.75rem;
-//     text-align: center;
-// }
+.spacer {
+    clear: both;
+}
 
 
 // ABOUT & PILLARS
@@ -138,17 +108,36 @@ p {
     z-index: -1;
 }
 
-#about-header {
-    margin-top: 22rem;
-    z-index: 2;
-}
-
 .pencil {
     display: block;
     margin: 0 auto;
     padding-top: 4rem;
 }
 
+.about-section {
+    position: relative;
+    margin-top: 0;
+    height: 70vh;
+}
+
+.members-section {
+    position: relative;
+    margin-top: 0;
+    height: 70vh;
+}
+
+.projects-section {
+    position: relative;
+    margin-top: 0;
+    height: 70vh;
+}
+.about-img {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    transform: translateY(-50vh);
+    z-index: -1;
+}
 
 // MISSION & MEMBERS
 
@@ -160,6 +149,10 @@ p {
     text-align: center;
     height: auto;
     position: relative;
+}
+
+.about-content {
+    transform: translateY(300%);
 }
 
 
@@ -233,9 +226,9 @@ p {
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
 
-    #about-header {
-        margin-top: 30em;
-    }
+    // #about-header {
+    //     margin-top: 30em;
+    // }
     .pencil {
         padding-top: 2.5rem;
     }
@@ -251,9 +244,9 @@ p {
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     
-    #about-header {
-        margin-top: 8em;
-    }
+    // #about-header {
+    //     margin-top: 8em;
+    // }
     .pencil {
         padding-top: 3rem;
     }
@@ -266,9 +259,9 @@ p {
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
 
-    #about-header {
-        margin-top: 17em;
-    }
+    // #about-header {
+    //     margin-top: 17em;
+    // }
     .pencil {
         padding-top: 4rem;
     }
@@ -287,9 +280,9 @@ p {
     .social-icons {
         margin-top: 2em;
     }
-    #about-header {
-        margin-top: 35rem;
-    }
+    // #about-header {
+    //     margin-top: 35rem;
+    // }
     .pencil {
         padding-top: 5rem;
     }
