--- a/assets/css/mainscrollv15.scss
+++ b/assets/css/mainscrollv15.scss
@@ -123,7 +123,7 @@ p {
 .members-section {
     position: relative;
     margin-top: 0;
-    height: 70vh;
+    height: 50vh;
 }
 
 .projects-section {
@@ -152,9 +152,9 @@ p {
 }
 
 .about-content {
-    transform: translateY(300%);
+    transform: translateY(250%);
+    width: 50%;
 }
-
 
 // BUTTONS
 
@@ -200,12 +200,7 @@ p {
     position: relative;
     z-index: -1;
   }
-  
-  .container {
-    // position: absolute;
-    z-index: 1;
-  }
-  
+
   .project-link:hover {
     opacity: .1%;
   }
@@ -226,32 +221,17 @@ p {
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
 
-    // #about-header {
-    //     margin-top: 30em;
-    // }
     .pencil {
         padding-top: 2.5rem;
-    }
-    #members-title {
-        margin-top: 22rem;
-    }
-    .projects-div {
-        // margin: 10rem 0;
     }
 
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-    
-    // #about-header {
-    //     margin-top: 8em;
-    // }
+
     .pencil {
         padding-top: 3rem;
-    }
-    #members-title {
-        margin-top: 10rem;
     }
 
 }
@@ -259,17 +239,8 @@ p {
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
 
-    // #about-header {
-    //     margin-top: 17em;
-    // }
     .pencil {
         padding-top: 4rem;
-    }
-    #members-title {
-        margin-top: 35rem;
-    }
-    .projects-div {
-        // margin: 1em 0;
     }
 
 }
@@ -280,18 +251,7 @@ p {
     .social-icons {
         margin-top: 2em;
     }
-    // #about-header {
-    //     margin-top: 35rem;
-    // }
     .pencil {
         padding-top: 5rem;
     }
-    #members-title {
-        margin-top: 60rem;
-    }
-    .projects-div {
-        // margin: 2em 0;
-        // padding: 2em 0;
-    }
-
 }
