--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -1,270 +1,272 @@
 .topbar {
-    background-color: #6D6D6D;
-    color: white;
+  background-color: #6D6D6D;
+  color: white;
 }
 
 .col1 {
-    width: 50%
+  width: 50%;
 }
 
 .col2 {
-    width: 50%
+  width: 50%;
 }
 
 .col-sm-5th {
-    width: 20%;
-    float:left;
+  width: 20%;
+  float: left;
 }
 
 .team-header {
-    padding-top: 4rem;
+  padding-top: 4rem;
 }
+
 .row {
-    padding-bottom: 0px;
+  padding-bottom: 0px;
 }
 
 #users {
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #proj-title {
-    padding-top: 1em;
-    font-weight: bolder;
-    text-align: center;
-    padding-bottom: 0px;
+  padding-top: 1em;
+  font-weight: bolder;
+  text-align: center;
+  padding-bottom: 0px;
 }
 
 .navbar.scrolled {
-    background-color: white !important;
-    -webkit-transition: background-color 200ms linear;
-    transition: background-color 200ms linear;
+  background-color: white !important;
+  -webkit-transition: background-color 200ms linear;
+  transition: background-color 200ms linear;
 }
 
 #proj-answers {
-    max-width: 16rem;
-    font-family: 'Chivo', sans-serif;
-    height: 25%;
-    letter-spacing: 0.07em;
-    line-height: 122%;
+  max-width: 16rem;
+  font-family: 'Chivo', sans-serif;
+  height: 25%;
+  letter-spacing: 0.07em;
+  line-height: 122%;
 }
 
 #proj-details {
-    font-family: 'Chivo', sans-serif;
-    text-align: right;
-    height: 20%;
-    font-style: italic;
+  font-family: 'Chivo', sans-serif;
+  text-align: right;
+  height: 20%;
+  font-style: italic;
 }
 
 h2 {
-    text-align: left;
-    font-weight: bold;
-    font-style: italic;
-    font-size: 1.5em;
+  text-align: left;
+  font-weight: bold;
+  font-style: italic;
+  font-size: 1.5em;
 }
 
 h3 {
-    text-align: left;
-    padding-bottom: 10px;
-    font-style: italic;
-    font-weight: 200;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.4em;
-
+  text-align: left;
+  padding-bottom: 10px;
+  font-style: italic;
+  font-weight: 200;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.4em;
 }
 
 h5 {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 20rem;
-    font-weight: lighter;
-    font-style: italic;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 20rem;
+  font-weight: lighter;
+  font-style: italic;
 }
 
 #how {
-    font-style: italic;
-    font-weight: 600;
-    color: #5B5B5B;
-    padding-bottom: 30px;
+  font-style: italic;
+  font-weight: 600;
+  color: #5B5B5B;
+  padding-bottom: 30px;
 }
 
 .topbar-img {
-    height: 90vw;
-    margin: 1.5rem;
-    margin-left: 1.5rem;
+  height: 90vw;
+  margin: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 #topbar-hr {
-    height: 0.01rem;
-    background: white;
-    max-width: 25rem;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2rem;
-    margin-top: 10px;
+  height: 0.01rem;
+  background: white;
+  max-width: 25rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2rem;
+  margin-top: 10px;
 }
 
 footer {
-    background-color: #202020;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    position: relative;
-    vertical-align: top;
-    z-index: 1;
+  background-color: #202020;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  position: relative;
+  vertical-align: top;
+  z-index: 1;
 }
 
 a {
-    color: white;
+  color: white;
 }
 
 p {
-    padding-top: 0px;
-    margin-top: 0px;
+  padding-top: 0px;
+  margin-top: 0px;
 }
 
 #underline1 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    transform: translateY(-32px);
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+          transform: translateY(-32px);
 }
 
 #underline2 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    transform: translateY(-32px);
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+          transform: translateY(-32px);
 }
 
 #underline3 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    transform: translateY(-32px);
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+          transform: translateY(-32px);
 }
 
 #underline4 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    transform: translateY(-32px);
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+          transform: translateY(-32px);
 }
 
 #underline5 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    transform: translateY(-42px);
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+          transform: translateY(-42px);
 }
 
 #underline6 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    transform: translateY(-42px);
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+          transform: translateY(-42px);
 }
 
 #underline7 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    transform: translateY(-42px);
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+          transform: translateY(-42px);
 }
 
 #underline8 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    transform: translateY(-42px);
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+          transform: translateY(-42px);
 }
 
 #d1p1 {
-    padding-left: 10px;
-    margin-bottom: 50px;
-    border-left: 3px solid rgba(153, 204, 255, 0.77);
+  padding-left: 10px;
+  margin-bottom: 50px;
+  border-left: 3px solid rgba(153, 204, 255, 0.77);
 }
 
 #d1p2 {
-    padding-left: 10px;
-    border-left: 3px solid #C4C4C4;
-    margin-bottom: 50px;
+  padding-left: 10px;
+  border-left: 3px solid #C4C4C4;
+  margin-bottom: 50px;
 }
 
 #d2p1 {
-    padding-right: 10px;
-    border-right: 3px solid #202020;
+  padding-right: 10px;
+  border-right: 3px solid #202020;
 }
 
 #d4p3 {
-    border-image: linear-gradient(to right, grey 25%, yellow 25%, yellow 50%, red 50%, red 75%, teal 75%) 5;
+  -o-border-image: linear-gradient(to right, grey 25%, yellow 25%, yellow 50%, red 50%, red 75%, teal 75%) 5;
+     border-image: -webkit-gradient(linear, left top, right top, color-stop(25%, grey), color-stop(25%, yellow), color-stop(50%, yellow), color-stop(50%, red), color-stop(75%, red), color-stop(75%, teal)) 5;
+     border-image: linear-gradient(to right, grey 25%, yellow 25%, yellow 50%, red 50%, red 75%, teal 75%) 5;
 }
 
 .bubbles1 {
-    padding-left: 2rem;
+  padding-left: 2rem;
 }
 
 @media (min-width: 778px) {
-
-    .topbar-img {
-        margin: 4.5rem;
-        height: 30vw;
-    }
-
-    #proj-details {
-        font-family: 'Chivo', sans-serif;
-        text-align: right;
-        padding-bottom: 30px;
-
-    }
-
-    #proj-answers {
-        max-width: 16rem;
-        font-family: 'Chivo', sans-serif;
-        height: 25%;
-        padding-top: 5px;
-        text-align: left;
-    }
-
-    .holder {
-        margin-left: 4.5rem;
-
-    }
-
-    h2 {
-        font-size: 1.5em;
-    }
-
-    h3 {
-        font-size: 1.17em;
-    }
-
-    #proj-title {
-        padding-top: 5rem;
-    }
+  .topbar-img {
+    margin: 4.5rem;
+    height: 30vw;
+  }
+  #proj-details {
+    font-family: 'Chivo', sans-serif;
+    text-align: right;
+    padding-bottom: 30px;
+  }
+  #proj-answers {
+    max-width: 16rem;
+    font-family: 'Chivo', sans-serif;
+    height: 25%;
+    padding-top: 5px;
+    text-align: left;
+  }
+  .holder {
+    margin-left: 4.5rem;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.17em;
+  }
+  #proj-title {
+    padding-top: 5rem;
+  }
 }
+/*# sourceMappingURL=anindividualproj15.css.map */
