--- a/assets/css/mainscrollv15.css
+++ b/assets/css/mainscrollv15.css
@@ -183,9 +183,12 @@ p {
 
 .project-planet {
   position: absolute;
-  margin-left: auto;
-  width: 30vw;
-  height: auto;
+  height: 225%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 200%;
 }
 
 .project-link {
