--- a/assets/css/mainscrollv15.scss
+++ b/assets/css/mainscrollv15.scss
@@ -204,9 +204,11 @@ p {
 
 .project-planet {
     position: absolute;
-    margin-left: auto;
-    width: 30vw;
-    height: auto;
+    height: 225%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200%;
 }
 
 .project-link {
