--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -1,10 +1,4 @@
-#how::after {
-    content: "\a";
-    white-space: pre;
-  }
-
 .topbar {
-  background-color: #6D6D6D;
   color: white;
 }
 
@@ -130,7 +124,7 @@ p {
 }
 
 #underline1 {
-  background: rgba(246, 208, 224, 0.6);
+  opacity: 50%;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -141,7 +135,7 @@ p {
 }
 
 #underline2 {
-  background: rgba(246, 208, 224, 0.6);
+  opacity: 50%;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -152,7 +146,7 @@ p {
 }
 
 #underline3 {
-  background: rgba(246, 208, 224, 0.6);
+  opacity: 50%;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -163,7 +157,7 @@ p {
 }
 
 #underline4 {
-  background: rgba(246, 208, 224, 0.6);
+  opacity: 50%;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -174,7 +168,7 @@ p {
 }
 
 #underline5 {
-  background: rgba(246, 208, 224, 0.6);
+  opacity: 60%;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -185,7 +179,7 @@ p {
 }
 
 #underline6 {
-  background: rgba(246, 208, 224, 0.6);
+  opacity: 60%;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -196,7 +190,7 @@ p {
 }
 
 #underline7 {
-  background: rgba(246, 208, 224, 0.6);
+  opacity: 60%;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -207,7 +201,7 @@ p {
 }
 
 #underline8 {
-  background: rgba(246, 208, 224, 0.6);
+  opacity: 60%;
   border-radius: 50px;
   width: 308px;
   height: 20px;
