--- a/assets/css/anindividualproj15.scss
+++ b/assets/css/anindividualproj15.scss
@@ -1,5 +1,4 @@
 .topbar {
-    background-color: #6D6D6D;
     color: white;
 }
 
@@ -13,12 +12,13 @@
 
 .col-sm-5th {
     width: 20%;
-    float:left;
+    float: left;
 }
 
 .team-header {
     padding-top: 4rem;
 }
+
 .row {
     padding-bottom: 0px;
 }
@@ -125,7 +125,7 @@ p {
 }
 
 #underline1 {
-    background: rgba(246, 208, 224, 0.6);
+    opacity: 50%;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -135,7 +135,7 @@ p {
 }
 
 #underline2 {
-    background: rgba(246, 208, 224, 0.6);
+    opacity: 50%;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -145,7 +145,7 @@ p {
 }
 
 #underline3 {
-    background: rgba(246, 208, 224, 0.6);
+    opacity: 50%;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -155,7 +155,7 @@ p {
 }
 
 #underline4 {
-    background: rgba(246, 208, 224, 0.6);
+    opacity: 50%;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -165,7 +165,7 @@ p {
 }
 
 #underline5 {
-    background: rgba(246, 208, 224, 0.6);
+    opacity: 60%;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -175,7 +175,7 @@ p {
 }
 
 #underline6 {
-    background: rgba(246, 208, 224, 0.6);
+    opacity: 60%;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -185,7 +185,7 @@ p {
 }
 
 #underline7 {
-    background: rgba(246, 208, 224, 0.6);
+    opacity: 60%;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -195,7 +195,7 @@ p {
 }
 
 #underline8 {
-    background: rgba(246, 208, 224, 0.6);
+    opacity: 60%;
     border-radius: 50px;
     width: 308px;
     height: 20px;
