--- a/assets/css/groupsource.css
+++ b/assets/css/groupsource.css
@@ -1,5 +1,93 @@
 .topbar {
-  background-color: #6D6D6D;
+  background-color: #7FADFC;
   color: white;
+}
+
+#underline1 {
+  background: #7FADFC;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline2 {
+  background: #7FADFC;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline3 {
+  background: #7FADFC;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline4 {
+  background: #7FADFC;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline5 {
+  background: #7FADFC;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
+
+#underline6 {
+  background: #7FADFC;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
+
+#underline7 {
+  background: #7FADFC;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
+
+#underline8 {
+  background: #7FADFC;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
 }
 /*# sourceMappingURL=groupsource.css.map */
