--- a/assets/css/floatingblocks.css
+++ b/assets/css/floatingblocks.css
@@ -1,1 +1,93 @@
-/* No CSS *//*# sourceMappingURL=floatingblocks.css.map */
+.topbar {
+  background-color: #E95633;
+  color: white;
+}
+
+#underline1 {
+  background: #E95633;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline2 {
+  background: #E95633;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline3 {
+  background: #E95633;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline4 {
+  background: #E95633;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline5 {
+  background: #E95633;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
+
+#underline6 {
+  background: #E95633;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
+
+#underline7 {
+  background: #E95633;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
+
+#underline8 {
+  background: #E95633;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
+/*# sourceMappingURL=floatingblocks.css.map */
