--- a/assets/css/netic.css
+++ b/assets/css/netic.css
@@ -2,4 +2,92 @@
   background-color: #6D6D6D;
   color: white;
 }
+
+#underline1 {
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline2 {
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline3 {
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline4 {
+  background: rgba(246, 208, 224, 0.6);
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+#underline5 {
+  background: #F6D0E0;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
+
+#underline6 {
+  background: #F6D0E0;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
+
+#underline7 {
+  background: #F6D0E0;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
+
+#underline8 {
+  background: #F6D0E0;
+  border-radius: 50px;
+  width: 308px;
+  height: 20px;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: translateY(-42px);
+  transform: translateY(-42px);
+}
 /*# sourceMappingURL=netic.css.map */
