--- a/assets/css/floatingblocks.scss
+++ b/assets/css/floatingblocks.scss
@@ -1,61 +1,28 @@
 .topbar {
     background-color: #E95633;
     color: white;
+    opacity: 0.8;
 }
 
 #underline1 {
     background: #E95633;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
 }
 
 #underline2 {
     background: #E95633;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
 }
 
 #underline3 {
     background: #E95633;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
 }
 
 #underline4 {
     background: #E95633;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
 }
 
 #underline5 {
     background: #E95633;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+    width: 280px;
 }
 
 #underline6 {
