--- a/assets/css/floatingblocks.scss
+++ b/assets/css/floatingblocks.scss
@@ -22,38 +22,15 @@
 
 #underline5 {
     background: #E95633;
-    width: 280px;
+    width: 10rem;
 }
 
 #underline6 {
     background: #E95633;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+    width: 12rem;
 }
 
 #underline7 {
     background: #E95633;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
-}
-
-#underline8 {
-    background: #E95633;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+    width: 13rem;
 }
