--- a/assets/css/bsfc.scss
+++ b/assets/css/bsfc.scss
@@ -1,10 +1,10 @@
 .topbar {
-    background-color: #69BF46;
+    background-color: #87CC6B;
     color: white;
 }
 
 #underline1 {
-    background: #69BF46;
+    background: #87CC6B;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -15,7 +15,7 @@
 }
 
 #underline2 {
-    background: #69BF46;
+    background: #87CC6B;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -26,7 +26,7 @@
 }
 
 #underline3 {
-    background: #69BF46;
+    background: #87CC6B;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -37,7 +37,7 @@
 }
 
 #underline4 {
-    background: #69BF46;
+    background: #87CC6B;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -48,7 +48,7 @@
 }
 
 #underline5 {
-    background: #69BF46;
+    background: #87CC6B;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -59,7 +59,7 @@
 }
 
 #underline6 {
-    background: #69BF46;
+    background: #87CC6B;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -70,7 +70,7 @@
 }
 
 #underline7 {
-    background: #69BF46;
+    background: #87CC6B;
     border-radius: 50px;
     width: 308px;
     height: 20px;
@@ -81,7 +81,7 @@
 }
 
 #underline8 {
-    background: #69BF46;
+    background: #87CC6B;
     border-radius: 50px;
     width: 308px;
     height: 20px;
