--- a/assets/css/makerspace.css
+++ b/assets/css/makerspace.css
@@ -1,10 +1,10 @@
 .topbar {
-  background-color: #A06A66;
+  background-color: #8C4C7E;
   color: white;
 }
 
 #underline1 {
-  background: #A06A66;
+  background: #8C4C7E;
   width: 308px;
   height: 20px;
   position: absolute;
@@ -14,7 +14,7 @@
 }
 
 #underline2 {
-  background: #A06A66;
+  background: #8C4C7E;
   width: 308px;
   height: 20px;
   position: absolute;
@@ -24,7 +24,7 @@
 }
 
 #underline3 {
-  background: #A06A66;
+  background: #8C4C7E;
   opacity: 50%;
   border-radius: 50px;
   width: 308px;
@@ -36,7 +36,7 @@
 }
 
 #underline4 {
-  background: #A06A66;
+  background: #8C4C7E;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -47,7 +47,7 @@
 }
 
 #underline5 {
-  background: #A06A66;
+  background: #8C4C7E;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -58,7 +58,7 @@
 }
 
 #underline6 {
-  background: #A06A66;
+  background: #8C4C7E;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -69,7 +69,7 @@
 }
 
 #underline7 {
-  background: #A06A66;
+  background: #8C4C7E;
   border-radius: 50px;
   width: 308px;
   height: 20px;
@@ -80,7 +80,7 @@
 }
 
 #underline8 {
-  background: #A06A66;
+  background: #8C4C7E;
   width: 308px;
   height: 20px;
   position: absolute;
