--- a/assets/css/mainscrollv15.css
+++ b/assets/css/mainscrollv15.css
@@ -154,14 +154,19 @@ p {
 .button {
   text-align: center !important;
   display: inline-block;
+  color: white;
   font-size: 1.25vw;
   border-radius: 1em;
   padding: 0.75em 2em;
-  margin: 1.5em 0;
+  margin-top: 2.5em;
   position: absolute;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+.button:hover {
+  cursor: pointer;
 }
 
 #members-button {
@@ -172,6 +177,31 @@ p {
 #about-button {
   border: solid #99CC99;
   background: #99CC99;
+}
+
+#projects-button {
+  border: solid #E06B65;
+  background: #E06B65;
+  font-size: 1.15vw;
+  padding: 0.5em 1.5em;
+  border-radius: 0.85em;
+  margin-top: 1.5em;
+  top: 65%;
+}
+
+#members-button:hover {
+  border: solid #74B0ED;
+  background: #74B0ED;
+}
+
+#about-button:hover {
+  border: solid #7ABB7A;
+  background: #7ABB7A;
+}
+
+#projects-button:hover {
+  border: solid #D8524B;
+  background: #D8524B;
 }
 
 .projects-div {
@@ -201,8 +231,8 @@ img {
   z-index: -1;
 }
 
-.project-link:hover {
-  opacity: .1%;
+.project-icon:hover {
+  opacity: 50%;
 }
 
 @media (min-width: 576px) {
