--- a/assets/css/mainscrollv15.scss
+++ b/assets/css/mainscrollv15.scss
@@ -11,6 +11,9 @@ $grad-2: #F4CCBE;
 $grad-3: #E58F7C;
 $grad-4: #6376A8;
 $grad-5: #202020;
+$blue-click: #74B0ED;
+$green-click: #7ABB7A;
+$red-click: #D8524B;
 $title-light: #FFF3D6;
 $title-dark: #CB6724;
 
@@ -173,16 +176,21 @@ p {
 .button {
     text-align: center!important;
     display: inline-block;
+    color: white;
     font-size: 1.25vw;
     border-radius: 1em;
     padding: 0.75em 2em;
-    margin: 1.5em 0;
+    margin-top: 2.5em;
     position: absolute;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     // -webkit-transition: all 0.25s ease;
     // transition: all 0.25s ease;
+}
+
+.button:hover {
+    cursor: pointer;
 }
 
 #members-button {
@@ -194,6 +202,32 @@ p {
     border: solid $green;
     background: $green;
 }
+
+#projects-button {
+    border: solid $red;
+    background: $red;
+    font-size: 1.15vw;
+    padding: 0.5em 1.5em;
+    border-radius: 0.85em;
+    margin-top: 1.5em;
+    top: 65%;
+}
+
+#members-button:hover {
+    border: solid $blue-click;
+    background: $blue-click;
+}
+
+#about-button:hover {
+    border: solid $green-click;
+    background: $green-click;
+}
+
+#projects-button:hover {
+    border: solid $red-click;
+    background: $red-click;
+}
+
 
 // FEATURED PROJECTS
 
@@ -221,9 +255,10 @@ img {
     z-index: -1;
 }
 
-.project-link:hover {
-    opacity: .1%;
+.project-icon:hover {
+    opacity: 50%;
 }
+
 
 // MEDIA QUERIES
 
