project gallery: added tags to all icons and fixed positioning

--- a/assets/css/anindividualproj15.scss
+++ b/assets/css/anindividualproj15.scss
@@ -233,9 +233,9 @@ p {
     margin-bottom: 35px;
 }
 
-.bubbles1 {
+// .bubbles1 {
     //bottom-padding: 4rem;
-}
+// }
 
 @media (min-width: 778px) {
 
