--- a/assets/css/projectsv15.css
+++ b/assets/css/projectsv15.css
@@ -4,6 +4,13 @@ h3 {
 }
 
 .navbar-light .navbar-nav .nav-link {
+  color: #202020;
+}
+
+.navbar.scrolled {
+  background-color: #ffffff !important;
+  -webkit-transition: background-color 200ms linear;
+  transition: background-color 200ms linear;
   color: white;
 }
 
@@ -78,11 +85,6 @@ iframe {
   z-index: -10;
   -webkit-transition: all .1s linear;
   transition: all .1s linear;
-}
-
-footer {
-  background-color: #ffffff;
-  height: 6vh;
 }
 
 .project-overview-container p {
