--- a/assets/css/projectsv15.css
+++ b/assets/css/projectsv15.css
@@ -1,3 +1,7 @@
+.project-tag {
+  line-height: 25px;
+}
+
 h3 {
   text-align: center;
   padding-bottom: 1.75rem;
@@ -97,7 +101,7 @@ iframe {
 
 figcaption {
   color: #545454;
-  text-align: center;
+  text-align: left;
   font-size: 0.8rem;
 }
 
