--- a/assets/css/projectsv15.scss
+++ b/assets/css/projectsv15.scss
@@ -7,6 +7,9 @@ $blue: #99CCFF;
 $gray: #787878;
 $black: #202020;
 
+.project-tag {
+  line-height: 25px;
+}
 
 h3 {
     text-align: center;
@@ -107,7 +110,7 @@ h3 {
   
   figcaption {
     color: #545454;
-    text-align: center;
+    text-align: left;
     font-size: 0.8rem;
   }
   
