--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -37,7 +37,7 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 40px;
+  font-size: 3.3vw;
   font-weight: bold;
   font-style: normal;
 }
@@ -60,11 +60,10 @@ h6 {
   text-align: center;
   max-width: 25em;
   margin: auto;
-  padding-bottom: 5em;
+  padding-bottom: 4%;
   color: black;
-  font-weight: 100;
+  font-weight: .1px;
   font-style: italic;
-
 }
 
 .column1 {
