--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -74,7 +74,10 @@ body {
 h6 {
     color: white;
     font-style: italic;
+    font-weight: .1px;
+    padding-bottom: 4%;
 }
+
 
 .header {
     color: white;
@@ -88,7 +91,7 @@ p.header {
 }
   
 h1 {
-    font-size: 2rem;
+    font-size: 3.3vw;
     font-weight: bold;
     font-style: normal;
 }
@@ -227,9 +230,9 @@ p {
         width: 18vw;
         margin-left: 82vw;
     }
-    h1 {
-        font-size: 4rem;
-    }
+    // h1 {
+    //     font-size: 4rem;
+    // }
     h2 {
         font-size: 2rem;
     }
