--- a/assets/css/projectsv15.css
+++ b/assets/css/projectsv15.css
@@ -2,6 +2,13 @@
   line-height: 25px;
 }
 
+h1 {
+  text-align: center;
+  font-size: 3.3vw;
+  font-weight: bold;
+  font-style: normal;
+}
+
 h3 {
   text-align: center;
   padding-bottom: 1.75rem;
